--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -98,6 +98,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "100 * psi_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "psi_1 - psi_0"
    ]
   },
@@ -126,6 +135,15 @@
    "outputs": [],
    "source": [
     "(psi_1 / (1 - psi_1)) / (psi_0 / (1 - psi_0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi_1 * psi_0 / ((1 - psi_1) * (1 - psi_0)) * 100 + psi_1"
    ]
   },
   {
